frontend_tests/negative/excluded_goroutine/go.mod
module example.com/renvotests/negative/goroutine

go 1.25
